--- a/unit_01/unit_01.html
+++ b/unit_01/unit_01.html
@@ -50,6 +50,6 @@
     <div class="s3"></div>
     <div class="s4"></div>
 
-    <script src="unit1.js"></script>
+    <script src="unit_01.js"></script>
 </body>
 </html>
