--- a/unit_02/unit_02.html
+++ b/unit_02/unit_02.html
@@ -115,6 +115,6 @@
         <div class="out-20"></div>
     </div>
 
-    <script src="unit2.js"></script>
+    <script src="unit_02.js"></script>
 </body>
 </html>
