--- a/unit_03/unit_03.html
+++ b/unit_03/unit_03.html
@@ -124,6 +124,6 @@
         <div class="out-20"></div>
     </div>
 
-    <script src="unit3.js"></script>
+    <script src="unit_03.js"></script>
 </body>
 </html>
